Add role class and methods as well as functionality to the existing services